--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2025-07-23
+  Features:
+    - Add machine pickers for assembler, furnace, and drill in the GUI and update calculation logic
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2025-07-16
   Features:
