--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 Version: 0.1.1
 Date: 2025-07-23
   Features:
-    - Add machine pickers for assembler, furnace, and drill in the GUI and update calculation logic
+    - Added machine pickers for assembler, furnace, and drill in the GUI and updated calculation logic
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2025-07-16
