Update to version 0.1.2; preserve calculator tree state after GUI closure and enhance storage for last calculated info

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version: 0.1.2
+Date: 2025-07-24
+  Features:
+    - The calculator tree is now preserved after closing and reopening the GUI
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2025-07-23
