--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version: 0.1.3
+Date: 2025-09-21
+  Features:
+    - Added a fullscren mode
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2025-07-24
   Features:
