--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@ Version: 0.1.3
 Date: 2025-09-21
   Features:
     - Added a fullscren mode
+    - Changed GUI to display recipe tree horizontally to improve readability
+    - Adjusted spacing and formatting for tree nodes
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2025-07-24
